# libvirtualhole

./: CMakeLists.txt
examples/virtualhole_test/: CMakeLists.txt  Makefile  main.c
include/: virtualhole.h
src/: CMakeLists.txt  Makefile  virtualhole.c  virtualhole.ftd2xx.c  virtualhole.h  virtualhole.libftdi.c
