PROJECT(LIBVIRTUALHOLE)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(LIBVERSION 0.1)
SET(LIBNAME "virtualhole")
SET(LIBFTDINAME "ftd2xx")
IF(NOT WIN32)
  INCLUDE_DIRECTORIES (/usr/include /usr/local/include)
  LINK_DIRECTORIES(/usr/lib /usr/local/lib)
ENDIF(NOT WIN32)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples/virtualhole_test)
