SET(SRCS virtualhole.c)
ADD_LIBRARY (virtualhole STATIC ${SRCS})
ADD_LIBRARY (virtualhole_dynamic SHARED ${SRCS})
SET_TARGET_PROPERTIES (virtualhole PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (virtualhole_dynamic PROPERTIES OUTPUT_NAME "virtualhole")
SET_TARGET_PROPERTIES (virtualhole_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (virtualhole_dynamic PROPERTIES VERSION ${LIBVERSION})
IF(NOT WIN32)
  INSTALL(TARGETS virtualhole virtualhole_dynamic LIBRARY DESTINATION "/usr/local/lib" ARCHIVE DESTINATION "/usr/local/lib")
  INSTALL(FILES virtualhole.h DESTINATION "/usr/local/include")
  IF(APPLE)
	SET_TARGET_PROPERTIES(virtualhole_dynamic PROPERTIES INSTALL_NAME_DIR "/usr/local/lib")
	SET_TARGET_PROPERTIES(virtualhole_dynamic PROPERTIES LINK_FLAGS "-compatibility_version 1.0.0 -current_version 1.${LIBVERSION}")
  ENDIF(APPLE)
ENDIF(NOT WIN32)
TARGET_LINK_LIBRARIES(virtualhole ${LIBFTDINAME})
TARGET_LINK_LIBRARIES(virtualhole_dynamic ${LIBFTDINAME})


