INSTALL(FILES virtualhole.h DESTINATION ${INCLUDE_INSTALL_DIR})

IF(LIBFTD2XX_FOUND)
  SET(C_COMM_SRCS virtualhole.ftd2xx.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTD2XX_INCLUDE_DIRS})
  BUILD_LIBS(virtualhole_ftd2xx "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTD2XX_LIBRARIES}" "-DLIBFTD2XX")
ENDIF(LIBFTD2XX_FOUND)

IF(LIBFTDI_FOUND)
  SET(C_COMM_SRCS virtualhole.libftdi.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTDI_INCLUDE_DIRS})
  BUILD_LIBS(virtualhole_libftdi "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTDI_LIBRARIES}" "-DLIBFTDI")
ENDIF(LIBFTDI_FOUND)
