INSTALL(FILES virtualhole.h DESTINATION ${INCLUDE_INSTALL_DIR})

# IF(LIBFTD2XX_FOUND)
#   SET(C_COMM_SRCS virtualhole.ftd2xx.c ${LIBRARY_SRCS})
#   INCLUDE_DIRECTORIES(${LIBFTD2XX_INCLUDE_DIRS})
#   BUILD_LIBS(virtualhole_ftd2xx "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTD2XX_LIBRARIES}" "-DLIBFTD2XX")
# ENDIF(LIBFTD2XX_FOUND)

IF(LIBFTDI_FOUND)
  SET(SRCS virtualhole.libftdi.c)
  BUILDSYS_BUILD_LIB(
    NAME virtualhole
    SOURCES "${SRCS}" 
    CXX_FLAGS "-DLIBFTDI"
    LINK_LIBS ${LIBVIRTUALHOLE_DEP_LIBS}
    LINK_FLAGS FALSE
    DEPENDS FALSE
    SHOULD_INSTALL TRUE
    VERSION "${LIBVIRTUALHOLE_VERSION}"
    )
ENDIF(LIBFTDI_FOUND)
